# hangman_thing

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
solver/: Cargo.toml
solver/src/: main.rs
src/: main.rs
word_lists/: tp.txt
