workspace = { members = ["solver"] }
[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clearscreen = "2.0.1"
dialoguer = "0.11.0"
rand = "0.8.5"
snafu = "0.8.2"
